--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body, * {
 
 body {
     background: #ffffff;
-    font-family: monospace;
+    font-family: helvetica;
     overflow: hidden;
 }
 
