--- a/works/works.css
+++ b/works/works.css
@@ -105,3 +105,13 @@ html, body, * {
         height: auto;
     }
 }
+
+#back-link {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 14px;
+  text-decoration: none;
+  color: black;
+}
