--- a/works/works.css
+++ b/works/works.css
@@ -108,10 +108,12 @@ html, body, * {
 
 #back-link {
   position: fixed;
-  bottom: 20px;
-  left: 50%;
+  bottom: 40px;
+  left: 5%;
   transform: translateX(-50%);
+  font-family: monospace;
   font-size: 14px;
   text-decoration: none;
   color: black;
+  z-index: 900
 }
