--- a/extra/extra.css
+++ b/extra/extra.css
@@ -105,3 +105,14 @@ html, body, * {
         height: auto;
     }
 }
+#back-link {
+  position: fixed;
+  bottom: 40px;
+  left: 5%;
+  transform: translateX(-50%);
+  font-family: monospace;
+  font-size: 14px;
+  text-decoration: none;
+  color: black;
+  z-index: 900
+}
