--- a/who/who.css
+++ b/who/who.css
@@ -195,3 +195,14 @@ html, body {
 .cv-button:hover {
   opacity: 0.8;
 }
+#back-link {
+  position: fixed;
+  bottom: 40px;
+  left: 5%;
+  transform: translateX(-50%);
+  font-family: monospace;
+  font-size: 14px;
+  text-decoration: none;
+  color: black;
+  z-index: 900
+}
